# alethe

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TRADEMARK.md  alethe.ipynb  alethe_quickstart.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alethe/: __init__.py  _asof.py  _cli.py  _lineage.py  _manifest.py  _models.py  _semiring.py
alethe/adapters/: __init__.py  delta.py  iceberg.py
alethe/integrations/: __init__.py  bi.py  dbt.py  openlineage.py  pit_rewriter.py
dbt_macros/: alethe_pit.sql
docs/: ows-spec-draft.md
examples/: airflow_reconstruct_dag.py
markdown/: alethe-value-proposition.md
notebooks/: 00_idea_testing.ipynb  01_library_quickstart.ipynb  02_dbt_openlineage.ipynb  03_end_to_end.ipynb  04_dbt_pit_runs.ipynb  05_airflow_reconstruction.ipynb  06_bounded_queries.ipynb  alethe_integrations.ipynb
poc/airflow/: .gitignore  README.md  poc_airflow_history.ipynb
poc/airflow/dags_src/: reconstruct_revenue.py
poc/dbt/: .gitignore  README.md  poc_dbt_history.ipynb  poc_support.py
poc/dbt/project/: dbt_project.yml  profiles.yml
poc/dbt/project/models/: schema.yml
poc/dbt/project/models/marts/: dim_customer.sql  fct_orders.sql  revenue_by_segment.sql
poc/dbt/project/seeds/: dim_date.csv
poc/dbt/project/snapshots/: customers_snapshot.sql
scripts/: obs_semiring.py  ows_delta_oracle.py  ows_examples.py  ows_manifest.jsonl  ows_manifest_and_iceberg.py
tests/: conftest.py  test_asof.py  test_dbt.py  test_manifest.py  test_semiring.py  test_zones.py
(+3 files in other folders)
