[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alethe"
version = "0.1.0"
description = "Reference implementation of the Observability Watermark Specification (OWS)"
authors = [{ name = "Caelan Cooper" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "observability watermark",
    "temporal queries",
    "data retention",
    "lakehouse",
    "delta lake",
    "iceberg",
    "data lineage",
    "time travel",
    "data quality",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
delta   = ["deltalake>=1.0", "pyarrow>=14.0"]
iceberg = ["pyiceberg>=0.7", "pyarrow>=14.0", "sqlalchemy>=2.0"]
all     = ["deltalake>=1.0", "pyiceberg>=0.7", "pyarrow>=14.0",
           "pandas>=2.0", "sqlalchemy>=2.0"]

[project.urls]
Homepage   = "https://github.com/seamus-aran/alethe"
Repository = "https://github.com/seamus-aran/alethe"
DOI        = "https://doi.org/10.5281/zenodo.21193962"

[tool.setuptools.packages.find]
where   = ["."]
include = ["alethe*"]
